--- a/CustomAnglerfishAI/default-config.json
+++ b/CustomAnglerfishAI/default-config.json
@@ -7,6 +7,7 @@
         "Turn Speed": 180,
         "Quick Turn Speed": 360,
         "Deaf": false,
-        "Mute": false
+        "Mute": false,
+        "Meteor Launching Mod Integration": true
     }
 }
