Add spin axis, fix failing to detect meteor mod before it's loaded

--- a/CustomAnglerfishAI/default-config.json
+++ b/CustomAnglerfishAI/default-config.json
@@ -8,6 +8,16 @@
         "Quick Turn Speed": 360,
         "Deaf": false,
         "Mute": false,
+        "Spin Axis": {
+            "type": "selector",
+            "value": "None",
+            "options": [
+                "None",
+                "X",
+                "Y",
+                "Z"
+            ]
+        },
         "Meteor Launching Mod Integration": true
     }
 }
