Added distance, reworked turn speed into a single multiplicative value, fixed muting looping sounds regardless of Mute setting, hopefully fixed incorrect default values for some anglerfish attributes (anglerfish will now pursue the player more closely, as in vanilla behavior)

--- a/CustomAnglerfishAI/default-config.json
+++ b/CustomAnglerfishAI/default-config.json
@@ -3,9 +3,9 @@
   "enabled": true,
   "settings": {
         "Size (%)": 100,
-        "Speed (%)": 100,
-        "Turn Speed": 180,
-        "Quick Turn Speed": 360,
+        "Move Speed (%)": 100,
+        "Turn Speed (%)": 100,
+        "Distance (%)": 100,
         "Deaf": false,
         "Mute": false,
         "Afraid": false,
