Add Rainbow lights, minor performance optimizations

--- a/CustomAnglerfishAI/default-config.json
+++ b/CustomAnglerfishAI/default-config.json
@@ -9,6 +9,7 @@
         "Deaf": false,
         "Mute": false,
         "Afraid": false,
+        "Rainbow Lights": false,
         "Spin Axis": {
             "type": "selector",
             "value": "None",
